// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Schema as absolute path 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  meInfo(consumer_key: String, consumer_secret: String): User!
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`Schema as array 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  meInfo(consumer_key: String, consumer_secret: String): User!
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`Schema as glob pattern 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  meInfo(consumer_key: String, consumer_secret: String): User!
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`Schema as string 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  meInfo(consumer_key: String, consumer_secret: String): User!
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`datasources as array 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [
      Object {
        "name": "users",
        "type": "AMAZON_DYNAMODB",
      },
      Object {
        "name": "tweets",
        "type": "AMAZON_DYNAMODB",
      },
    ],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  meInfo(consumer_key: String, consumer_secret: String): User!
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`datasources as array form different files (array of arrays or objects) 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [
      Object {
        "name": "users",
        "type": "AMAZON_DYNAMODB",
      },
      Object {
        "name": "tweets",
        "type": "AMAZON_DYNAMODB",
      },
      Object {
        "name": "foo",
        "type": "AMAZON_DYNAMODB",
      },
      Object {
        "name": "bar",
        "type": "AMAZON_DYNAMODB",
      },
    ],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  meInfo(consumer_key: String, consumer_secret: String): User!
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;

exports[`returns valid config 1`] = `
Array [
  Object {
    "additionalAuthenticationProviders": Array [],
    "authentication": Object {
      "type": "AWS_IAM",
    },
    "dataSources": Array [
      Object {
        "name": "users",
        "type": "AMAZON_DYNAMODB",
      },
      Object {
        "name": "tweets",
        "type": "AMAZON_DYNAMODB",
      },
    ],
    "defaultMappingTemplates": Object {},
    "isSingleConfig": true,
    "mappingTemplatesLocation": Object {
      "pipelineFunctions": "mapping-templates",
      "resolvers": "mapping-templates",
    },
    "name": "api",
    "pipelineFunctions": Array [],
    "region": "us-east-1",
    "resolvers": Array [],
    "schema": "type Mutation  {
  createTweet(tweet: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String, created_at: String!): Tweet!
  deleteTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  reTweet(tweet_id: String!, consumer_key: String, consumer_secret: String, access_token_key: String, access_token_secret: String): Tweet!
  updateTweet(tweet_id: String!, tweet: String!): Tweet!
  updateUserInfo(location: String!, description: String!, name: String!, followers_count: Int!, friends_count: Int!, favourites_count: Int!, followers: [String!]!): User!
}

type Query  {
  meInfo(consumer_key: String, consumer_secret: String): User!
  getUserInfo(handle: String!, consumer_key: String, consumer_secret: String): User!
  searchAllTweetsByKeyword(keyword: String!): TweetConnection
}

type Subscription  {
  addTweet: Tweet @aws_subscribe(mutations: [\\"createTweet\\"])
}

type Tweet  {
  tweet_id: String!
  tweet: String!
  retweeted: Boolean
  retweet_count: Int
  favorited: Boolean
  created_at: String!
}

type TweetConnection  {
  items: [Tweet!]!
  nextToken: String
}

type User  {
  name: String!
  handle: String!
  location: String!
  description: String!
  followers_count: Int!
  friends_count: Int!
  favourites_count: Int!
  followers: [String!]!
  topTweet: Tweet
  tweets(limit: Int!, nextToken: String): TweetConnection
  searchTweetsByKeyword(keyword: String!): TweetConnection
}",
    "substitutions": Object {},
    "xrayEnabled": false,
  },
]
`;
